fixed scroll issue on mobile

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -40,4 +40,7 @@
   .category {
     margin-top: 5%;
   }
+  main {
+    overflow: hidden;
+  }
 }
